# ssrand

./: Cargo.toml  README.md
src/: bitmatrix.rs  lib.rs  main.rs  math.rs
tests/: test_bcmatrix.rs  test_bitmatrix.rs  test_lib.rs  test_math.rs
