[package]
name = "ssrand"
description = "Simple PRNGs ala George Marsaglia"
version = "0.1.4"
authors = ["Zachary Tomlinson <ztomlinson7@gmail.com>", ]
readme = "README.md"
repository = "https://github.com/zacharytomlinson/ssrand"
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
edition = "2018"

[lib]
test = false

[dependencies]
rand_core = { version = "0.6.4", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
